# pve-backup

./: .gitignore  AGENTS.md  README.md  config.example.yaml  configure.sh  pve-backup.env.example  pyproject.toml  start.sh
src/pve_backup/: archive.py  cli.py  config.py  naming.py  retention.py  runner.py  state.py  uploader.py
systemd/: pve-backup.service  pve-backup.timer
