[project]
name = "pve-backup"
version = "0.1.0"
description = "Run Proxmox VE vzdump backups and upload artifacts to Volcengine TOS."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42.0",
  "pyzipper>=0.3.6",
  "PyYAML>=6.0",
  "tos>=2.8",
  "zstandard>=0.22",
]

[project.scripts]
pve-backup = "pve_backup.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
